fix react callback warning, fix browser height on mobile, abstract app.js

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,19 @@
+body {
+  height: 100%;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #root {
-  height: 100vh;
+  height: 100%;
 }
 
 html {
   box-sizing: border-box;
+  height: 100%;
 }
+
 *,
 *:before,
 *:after {
@@ -31,21 +40,10 @@ html {
   width: 100%;
 }
 
-body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 h1,
